change order eslintrc

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,20 +3,20 @@
     "browser": true,
     "es2021": true
   },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "react"],
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "plugin:react/jsx-runtime",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:react/jsx-runtime"
   ],
+  "rules": {},
   "overrides": [],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
-  "rules": {},
   "settings": {
     "react": {
       "version": "detect"
