--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "importOrder": ["^[./]"],
+  "importOrder": ["^@fontsource/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
