add input and list of times

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "importOrder": ["^@fontsource/(.*)$", "^[./]"],
+  "importOrder": ["react", "^@mui/(.*)$", "^@fontsource/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
