add mui datepicker with date-fns

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,5 +1,11 @@
 {
-  "importOrder": ["react", "^@mui/(.*)$", "^@fontsource/(.*)$", "^[./]"],
+  "importOrder": [
+    "react",
+    "^@mui/(.*)$",
+    "date-fns/(.*)$",
+    "^@fontsource/(.*)$",
+    "^[./]"
+  ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
 }
