fix prettier import order

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -2,7 +2,7 @@
   "importOrder": [
     "react",
     "^@mui/(.*)$",
-    "date-fns/(.*)$",
+    "^date-fns/?(.*)$",
     "^@fontsource/(.*)$",
     "^@/(.*)$",
     "^[./]"
