add react query to app

--- a/packages/app/.prettierrc
+++ b/packages/app/.prettierrc
@@ -1,6 +1,7 @@
 {
   "importOrder": [
     "react",
+    "^@tanstack/react-query/?(.*)$",
     "^@mui/(.*)$",
     "^date-fns/?(.*)$",
     "^@fontsource/(.*)$",
