--- a/packages/app/.eslintrc.json
+++ b/packages/app/.eslintrc.json
@@ -11,7 +11,9 @@
     "plugin:react/recommended",
     "plugin:react/jsx-runtime"
   ],
-  "rules": {},
+  "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": "error"
+  },
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
