add basic notifications

--- a/packages/app/.prettierrc
+++ b/packages/app/.prettierrc
@@ -3,6 +3,7 @@
     "react",
     "^@tanstack/react-query/?(.*)$",
     "^@mui/(.*)$",
+    "^notistack/?(.*)$",
     "^date-fns/?(.*)$",
     "^@fontsource/(.*)$",
     "^@/(.*)$",
