--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
     "packages/*"
   ],
   "scripts": {
-    "start:web": "npm run -w ./packages/app start"
+    "start:web": "npm run -w ./packages/app start",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "prettier": "3.2.4"
