Add prettier script to package.json

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   ],
   "scripts": {
     "start:web": "npm run -w ./packages/app start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier": "prettier --write ."
   },
   "devDependencies": {
     "prettier": "3.2.4"
