Update .prettierrc to include overrides for JSON files

--- a/client/packages/app/.prettierrc
+++ b/client/packages/app/.prettierrc
@@ -11,5 +11,13 @@
     "^[./]"
   ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "trailingComma": "none"
+      }
+    }
+  ]
 }
